--- a/styles.css
+++ b/styles.css
@@ -52,13 +52,11 @@ body {
   min-height: 100vh;
   justify-content: center;
   align-items: center;
-  background-color: grey;
+  background-color: rgb(78, 78, 78);
 }
 
 .page-content {
   display: flex;
-  background-color: brown;
-  padding: 5px;
   width: 60vw;
   height: 75vh;
 }
@@ -66,7 +64,7 @@ body {
 .left-panel {
   display: flex;
   flex-direction: column;
-  background-color: rgb(207, 49, 228);
+  background-color: rgb(131, 74, 74);
   width: 37.5%;
   height: 100;
   align-items: stretch;
@@ -74,12 +72,16 @@ body {
   min-height: 500px;
   text-align: center;
   justify-content: space-between;
+  background-image: url("mountain.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .right-panel {
   display: flex;
   flex-direction: column;
-  background-color: rgb(54, 162, 212);
+  background-color: antiquewhite;
   width: 62.5%;
   height: 100;
   min-width: 300px;
@@ -93,7 +95,8 @@ body {
 
 .footer {
   flex: 0 1 auto;
-
+  color: white;
+  padding: 5px;
 }
 
 .project-name {
@@ -101,7 +104,42 @@ body {
   align-items: center;
   justify-content: center;
   flex: 0 1 2em;
-  font-size: 50px;
-  background-color: rgb(0,0,0,0.3);
+  font-size: 2vW;
+  background-color: rgba(255, 255, 255, 0.35);
   margin-top: max(20vh, 120px);
+}
+
+.form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 20px;
+}
+
+.form-element {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-left, .form-right {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+div.footer > a {
+  color: rgb(255, 255, 255);
+}
+
+button {
+  background-color: rgb(122, 109, 70);
+  border: 0;
+  height: 30px;
+  width: 120px;
+}
+
+div.log-in > a {
+  color: rgb(122, 109, 70);
+  font-weight: bold;
+  text-decoration: none;
 }
