--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,8 @@ body {
   justify-content: center;
   align-items: center;
   background-color: rgb(78, 78, 78);
+  font-family: Roboto, Arial, sans-serif;
+  font-weight: 400;
 }
 
 .page-content {
@@ -88,7 +90,6 @@ body {
   min-height: 500px;
 }
 
-.header, .form-container,
 .submit-container{
   flex: 1;
 }
@@ -97,6 +98,8 @@ body {
   flex: 0 1 auto;
   color: white;
   padding: 5px;
+  font-weight: 300;
+  font-size: 0.7vw;
 }
 
 .project-name {
@@ -112,13 +115,38 @@ body {
 .form {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 40px;
   margin: 20px;
+  margin-left: 30px;
+  flex: 1;
 }
 
 .form-element {
   display: flex;
   flex-direction: column;
+
+}
+
+div.form-element input {
+  width: 12vw;
+  min-width: 220px;
+  height: 2vh;
+  border-radius: 7px;
+  border: 1px solid rgb(211, 198, 161);
+  background-color: rgb(250, 239, 224);
+}
+
+.form-element input:focus {
+  outline-style: none;
+  background-color: rgb(247, 239, 231);
+  box-shadow: 2px 2px 4px 1px #b1b1b1;
+}
+
+div.form-element label {
+  font-size: 13px;
+  font-stretch: expanded;
+  margin-bottom: 5px;
+  font-weight: 300;
 }
 
 .form-left, .form-right {
@@ -132,14 +160,68 @@ div.footer > a {
 }
 
 button {
-  background-color: rgb(122, 109, 70);
+  background-color: rgb(161, 148, 108);
   border: 0;
-  height: 30px;
-  width: 120px;
+  height: 50px;
+  width: 150px;
+  font-size: 25px;
+  border-radius: 8px;
 }
 
 div.log-in > a {
-  color: rgb(122, 109, 70);
-  font-weight: bold;
+  color: rgb(139, 126, 84);
+  font-weight: 700;
   text-decoration: none;
+}
+
+.submit-button {
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.log-in {
+  margin-top: 10px;
+  margin-left: 30px;
+}
+
+.form-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 5px 3px -3px #b1b1b1;
+  background-color: rgb(250, 239, 224);
+}
+
+.header {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-items: flex-end;
+}
+
+.text1, .text2 {
+  font-size: 20px;
+  margin-left: 30px;
+  margin-right: 40px;
+  font-weight: 600;
+}
+
+.text1 {
+  margin-top: 15vh;
+  max-width: 60ch;
+}
+
+.text2 {
+  margin-top: 15px;
+}
+
+i {
+  font-style: italic;
+  font-weight: 600;
+}
+
+div h1 {
+  margin-left: 30px;
+  margin-top: 70px;
+  font-size: 22px;
 }
